<resources>
    <string name="app_name" translatable="false">Mi Hogar</string>
    <string name="msmAvanzarCont" translatable="false">PRESIONA TRES VECES PARA BORRAR:</string>
    <string name="default_web_client_id">1060475592379-i0lvhre7cdb907v84ivk0qg52j6he046.apps.googleusercontent.com</string>
    <string-array name="dias">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="MesesInt">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="Años">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string-array name="value_tiempo_pago">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="key_tiempo_pago">
        <item>Mensual</item>
        <item>Diario</item>
        <item>Horas</item>
        <item>1 Minuto</item>
    </string-array>
    <string name="sNombreUser" translatable="false">Nombres.</string>
    <string name="email">identificador</string>
    <string name="password">password</string>
    <string name="direccion">direccion</string>
    <string name="correo">Correo electronico</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabla">TablaActivity</string>
    <string name="sApeMat">Apellido materno.</string>
    <string name="sApePat">Apellido paterno.</string>
    <string name="sDni">DNI.</string>
    <string name="buttonSalir">salir</string>
    <string name="buttonVerPagos">Ver Pagos</string>
    <string name="sBtCancelar">cancelar</string>
    <string name="sBtAgregar">AGREGAR</string>
    <string name="sfecha_i">Fecha de inicio</string>
    <string name="s_num_c">Numero de cuarto:</string>
    <string name="sTitleAI">NUEVO INQUILINO</string>
    <string name="srbFaltaC">Falta Cancelar</string>
    <string name="srbCancelo">Cancelo</string>
    <string name="sMensualidad">Mensualidad.</string>
    <string name="cdImageView">Calificativo</string>
    <string name="sMotSalida">MOTIVOS DE SALIDA</string>
    <string name="s_datos_usuario">DATOS DE USUARIO.</string>
    <string name="transition_name">transition_photo</string>
    <string name="NumeroTelf">Numero telefonico</string>
    <string name="sCorreoEl">Correo Electronico</string>
    <string name="start">inicio</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="lpPlazo">list_tiempo</string>
    <string name="cpHotel">rbHotel</string>
    <string name="cpCasa">cbCasa</string>
    <string name="s">getString(R.)</string>
    <string name="fotoCuartoDescripcion">Foto para representar el cuarto</string>
    <string name="etNumCuarto">Numero de cuarto</string>
    <string name="etDetalles">Detalles</string>
    <string name="etPrecio">Precio estimado</string>
    <string name="sMostrarPago">MOSTRAR PAGOS</string>
    <string name="datos_del_usuario">DATOS DEL USUARIO.</string>
    <string name="toma_foto">toma una foto</string>
    <string name="sNumTel">Número telefonico.</string>
    <string name="sCorreo">Correo electronico.</string>
    <string name="sDatosAlquile">DATOS DEL ALQUILER.</string>
    <string name="sPlazoPago">Plazo de pago.</string>
    <string name="sPlazo">Plazo</string>
    <string name="s1">1</string>
    <string name="detalles_del_representante">DATOS DEL REPRESENTANTE</string>
    <string name="campos_vasios">Lista vacia, agrege nuevos usuarios</string>
    <string name="descripcion_fecha_mensualidad">Fecha y hora de modificacion</string>
    <string name="descripcion_fecha_pago">fecha y hora de pago</string>
    <string name="descripcion_id_pago">Identificador del pago</string>
    <string name="success">success</string>
    <string name="cHogar">hogar</string>
    <string name="cUsers">users</string>
    <string name="cAlquileres">rentals</string>
    <string name="cRoom">rooms</string>
    <string name="cPayment">payment</string>
    <string name="cTenant">tenant</string>
    <string name="cRentalTenant">rentalTenant</string>
    <string name="cMonthlyPayment">monthlyPayment</string>
    <string name="mdRoomDetails">details</string>
    <string name="mdRoomPrice">price_e</string>
    <string name="mdRoomPathImage">pathImage</string>
    <string name="mdRoomCurrentRentalId">currentRentalId</string>
    <string name="mdRoomPathImageStorage">pathImageStorage</string>
    <string name="mdRentalCurrentMP">currentMP</string>
    <string name="mdRentalDepartureDate">departureDate</string>
    <string name="mdRentalReasonExit">reasonExit</string>
    <string name="mdRentalMainTenant">mainTenant</string>
    <string name="mdRentalTenantsNumber">tenantsNumber</string>
    <string name="mdRentalPaymentsNumber">paymentsNumber</string>
    <string name="mdRentalPhoneNumber">phoneNumber</string>
    <string name="mdRentalRoomNumber">roomNumber</string>
    <string name="mdRentalEmail">email</string>
    <string name="mdRTDni">DNI</string>
    <string name="mdRTRentalId">rentalId</string>
    <string name="mdPaymentDate">date</string>
    <string name="mdPaymentAmount">amount</string>
    <string name="mdPaymentMonthlyPaymentId">monthlyPaymentId</string>
    <string name="mdmpLastPayment">lastPaymentId</string>
    <string name="mdTenantName">name</string>
    <string name="mdTenantApellidoPat">apellidoPat</string>
    <string name="mdTenantApellidoMat">apellidoMat</string>
    <string name="mdTenantPath">path</string>
    <string name="sPayRent">PAGAR ALQUILER</string>
    <string name="s_room_without_rental">Agregar alquiler</string>
    <string name="sUploadPhotoError">Photo could not be uploaded</string>
    <string name="sTitle">Mi Hogar</string>
    <string name="sSubTitle">seguro</string>
    <string name="sEmailRequired">Correo electronico*</string>
    <string name="sEmailExample">alexrod@gmail.com</string>
    <string name="sPassword">Contraseña*</string>
    <string name="sPasswordExample">hola12</string>
    <string name="sForgotPass">Se te olvidó tu contraseña?</string>
    <string name="sNewUSer">Nuevo Usuario?<br />Registrate</string>
    <string name="sLogin">Login</string>
    <string name="sContinueWith">O conectar con</string>
    <string name="sConfirmPassword">Confirma tu contraseña*</string>
    <string name="sAddress">Direccion</string>
    <string name="sDepartamento">Departamento</string>
    <string name="sCountry">Pais</string>
    <string name="sZipCode">Codigo postal</string>
    <string name="sProvince">Provincia</string>
    <string name="email_error">Correo electronico incorrecto</string>
    <string name="confirm_pass_error">Las contraseñas no coinciden</string>
    <string name="pass_error">La contraseña debe tener al menos 6 caracteres</string>
    <string name="name_error">Error: nombres</string>
    <string name="last_ame_error">Error: Apellidos</string>
    <string name="details_error">Error: detalles</string>
    <string name="sGuardar">Guardar</string>
    <string name="sRegistrar">Registrar</string>
    <string name="sRegistry">Registry</string>
    <string name="sDetails">Datos del usuario</string>
    <string name="name">nombers</string>
    <string name="s_send_email">Enviar correo</string>
    <string name="s_email_confirm_title">Hola</string>
    <string name="s_email_confirm_title_example">Hola Alexander Rodriguez</string>
    <string name="sRoom">Cuarto</string>
    <string name="sTenant">Inquilinos</string>
    <string name="sError">Ocurrio un error</string>
    <string name="cAdvance">advance</string>
    <string name="sMPError">Mensualidad no valida</string>
    <string name="smpNotFound">Current Monthly Payment wasn\'t found</string>
    <string name="s_email_confirm_message_example">Porfavor verifique que su direccion de correo electronico adragonrc@gmail.com sea de usted, en caso de no ferificarse en los proximos x dias, su cuenta sera bloqueada</string>
    <string name="s_email_confirm_message_start">Porfavor verifique que su direccion de correo electronico </string>
    <string name="s_email_confirm_message_end"> sea de usted, y asi evitar futuros problemas.</string>
    <string name="mdRoomNumber">roomNumber</string>
    <string name="push_pin_description">Fijar cuarto</string>
    <string name="sDelete">Eliminar</string>
    <string name="sPushPin">Fijar</string>
    <string name="mdRoomIsHide">hide</string>
    <string name="mdRoomNumberOfRentals">numberOfRentals</string>
    <string name="title_add_rental">Nuevo Alquiler</string>
    <string name="s_email">Correo electronico</string>
    <string name="sImage">image</string>
    <string name="s_forgot_password_subtitle">Proporcione el correo electrónico de la cuenta que desea restablecer la contraseña</string>
    <string name="s_forgot_password">CONTRASEÑA OLVIDADA</string>
    <string name="s_continue">Continuar</string>
    <string name="s_error_performing_action">Ocurrio un error al realizar esta accion</string>
</resources>