<?xml version="1.0" encoding="utf-8"?>
<com.alexander_rodriguez.mihogar.registrarcasa.register.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".registrarcasa.register.RegisterView"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:id="@+id/register">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sEmailRequired"
            android:text="@string/sEmailExample"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sPassword"
            android:inputType="textPassword"
            android:text="@string/sPasswordExample"
            android:textColor="@color/primaryTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sConfirmPassword"
            android:inputType="textPassword"
            android:text="@string/sPasswordExample"
            android:textColor="@color/primaryTextColor" />
    </com.google.android.material.textfield.TextInputLayout>
</com.alexander_rodriguez.mihogar.registrarcasa.register.RegisterView>