<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppThemeMaterial"
    tools:context=".forgot_password.ForgotPasswordFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">
            <ImageView
                android:layout_width="164dp"
                android:layout_height="164dp"
                android:src="@drawable/ic_baseline_quiz_encryption_24"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/sImage"
                app:tint="@color/primaryColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/muli_black"
                android:gravity="center"
                android:lines="2"
                android:text="@string/s_forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/multi"
                android:gravity="center"
                android:text="@string/s_forgot_password_subtitle"
                android:textColor="#000000"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/colorAccent"
                android:hint="@string/s_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:textColor="@color/primaryTextColorLigth"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/s_continue"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>