<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="24dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_email_confirm_title_example"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/primaryColor"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/s_email_confirm_message_example"
            android:layout_marginTop="4dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/s_send_email"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>